# a-tale-of-binary-translation

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: build.sh  fib.s  fib_recursive.s  hello_world.s
src/: main.rs  syscall.rs
src/backend/: interpreter.rs
src/backend/jit/: cranelift.rs  mod.rs  rustc.rs
src/frontend/: decode.rs  mod.rs  translate.rs
